force-app/main/default/objects/AssetWarranty/fields/SVMXA360__SupplierContactId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SupplierContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the supplier primary Contact record.</description>
    <label>Supplier Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Asset Warranties</relationshipLabel>
    <relationshipName>Asset_Warranties</relationshipName>
    <type>Lookup</type>
</CustomField>