force-app/main/default/objects/AssetWarranty/fields/SVMXA360__TravelCovered__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TravelCovered__c</fullName>
    <description>The percentage of Travel covered.</description>
    <label>Travel Covered</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>