force-app/main/default/objects/AssetWarranty/fields/SVMXA360__TravelCoveredEndDate__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TravelCoveredEndDate__c</fullName>
    <description>The date until when Travel discount is covered.</description>
    <label>Travel Covered End Date</label>
    <type>Date</type>
</CustomField>